--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline{
             }
             post {
                 always {
-                    sh "docker-compose down -rmi all"
+                    sh "docker-compose down --rmi all"
                 }
             }
         }
