--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -9,6 +9,11 @@ pipeline{
         disableConcurrentBuilds()
     }
     stages{
+        stage('Checkout') {
+            steps {
+               checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[url: 'https://github.com/dcarbajosa/sf-spring-boot.git']]])
+            }
+        }
         stage('Build') {
             steps {
                 sh "gradle clean build"
